--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "expo start --web",
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "^35.0.0",
